test/good/no_data.ulm
.text
main: nop

; no data section