test/bad/unterminated_string.ulm
.text
    nop

.data
    .string "
    .string "foo"